[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "battlesnake_gym"
version = "0.1.0"
authors = [{name = "Jeff Roach", email = "bitcloud22@gmail.com"}]
description = "Gym environment simulating BattleSnake game."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["BattleSnake", "snake", "gym", "gymnasium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gymnasium",
]

[project.urls]
Repository = "https://github.com/bitcloud2/battlesnakegym"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "battlesnake_gym.rust"